# Cooperative-Localization

./: README.md
ar_sys/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ar_sys/data/multi/: boards.yml  sideboard1.yml  sideboard1_center.yml  sideboard2.yml  sideboard2_center.yml  sideboard3.yml  sideboard3_center.yml  sideboard4.yml  sideboard4_center.yml
ar_sys/data/single/: board_c3po.yml~  singleboard.yml
ar_sys/data/single2by3/: two_by_three.yml
ar_sys/include/aruco/: boarddetector.h
ar_sys/launch/: backboard_apollo.launch  backboard_apollo.launch~  cam.launch~  frontboard_apollo.launch  frontboard_apollo.launch~  frontboard_boreas.launch  frontboard_boreas.launch~  multi_boards_vrm.launch  multi_boards_vrm.launch~  single_board.launch~  single_board_2by3.launch~  single_board_raul.launch~
ar_sys/msg/: Trans_Repro_Info.msg  Trans_Repro_Info.msg~  arsys_measurement.msg
ar_sys/src/: single_board.cpp  system_viewer.cpp
ar_sys/src/aruco/: boarddetector.cpp
auto_mover/: CMakeLists.txt  mainpage.dox  mainpage.dox~  package.xml  package.xml~
auto_mover/src/: auto_mover.cpp  control_teleop_joy2.cpp~  control_teleop_try.cpp~  xbox_follower.cpp~
auto_mover/srv/: robot_state.srv  robot_state.srv~
cam_info_publisher/: CMakeLists.txt  README.md  package.xml
cam_info_publisher/calibrations/: boreas_left.yaml  boreas_right.yaml  boreas_right.yaml~
cam_info_publisher/include/: cam_info_publisher.hpp
cam_info_publisher/src/: cam_info_publisher.cpp  cam_info_publisher.cpp~
sptam/launch/: level7.launch  mit.launch  sptam.launch~
sptam/src/ros/: sptam_node.cpp  sptam_node.hpp
sptam/src/sptam/: MapMaker.cpp  MapMakerThread.cpp  tracker_g2o.cpp  tracker_g2o.hpp
sptam_coop/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
sptam_coop/launch/: kitti.launch  sim_sptam.launch~  sptam.launch~  sptam_coop.launch  sptam_coop.launch~
sptam_coop/src/ros/: CMakeLists.txt  CMakeLists.txt~  main.cpp  sptam_node.cpp  sptam_node.hpp
sptam_coop/src/sptam_coop/: CMakeLists.txt  FeatureExtractorThread.cpp  MapMaker.cpp  MapMakerThread.cpp  Measurement_3d_2d.hpp  StereoFrame.cpp  sptam.cpp  sptam.hpp  tracker_g2o.cpp  tracker_g2o.hpp  types_sba_extension.cpp  types_sba_extension.hpp
