<?xml version="1.0"?>
<package>
	<name>auto_mover</name>
	<version>1.0.5</version>
	<description>This node is to control robot using joy</description>
	<maintainer email="zaijuanli@gmail.co">Zaijuan Li</maintainer>
	<license>BSD</license>
	
	<author email="zaijuanli@gmail.com">Zaijuan Li</author>


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>joy</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>geometry_msgs</build_depend>
        <build_depend>std_msgs</build_depend>
        <build_depend>message_generation</build_depend>
        <build_depend>ar_sys</build_depend>

        <run_depend>joy</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>roscpp</run_depend>
        <run_depend>geometry_msgs</run_depend>
        <run_depend>std_msgs</run_depend>
        <run_depend>message_generation</run_depend>
        <run_depend>ar_sys</run_depend>
        <run_depend>message_runtime</run_depend>

</package>
